--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#FFF3F3" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Cardo" rel="stylesheet">
     <title>Boda Pablo y Paloma</title>
     <link
       rel="stylesheet"
@@ -13,19 +17,22 @@
     />
     <style>
     body {
-      background-color: #FFF3F3; 
+      background-color: #fffbf0; 
     }
     @media (min-width: 600px){
       .background {
-        background-color: #FFF3F3; 
+        background-color: #fffbf0; 
         background-image: url(/Assents/home1.png); 
+        @supports (background-image: url(/Assents/home1.webp)) {
+          background-image: url(/Assents/home1.webp);
+        }
         background-repeat: repeat-y;
         background-size: 100%;
       }
     }
     @media (max-width: 600px){
       .background {
-        background-color: #FFF3F3;
+        background-color: #fffbf0;
       }
     }
     </style>
