--- a/public/index.html
+++ b/public/index.html
@@ -22,9 +22,9 @@
     @media (min-width: 600px){
       .background {
         background-color: #fffbf0; 
-        background-image: url(/Assents/home1.png); 
-        @supports (background-image: url(/Assents/home1.webp)) {
-          background-image: url(/Assents/home1.webp);
+        background-image: url("%PUBLIC_URL%/assent/home1.png"); 
+        @supports (background-image: url("%PUBLIC_URL%/assent/home1.webp")) {
+          background-image: url("%PUBLIC_URL%/assent/home1.webp");
         }
         background-repeat: repeat-y;
         background-size: 100%;
