Fix mobile view

--- a/public/index.html
+++ b/public/index.html
@@ -51,7 +51,7 @@
           background-image: url("%PUBLIC_URL%/assent/home1.webp");
         }
         background-repeat: repeat-y;
-        background-size: 100%;
+        background-size: contain;
       }
     }
     @media (max-width: 600px){
