--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cardo" rel="stylesheet">
+    <link href="%PUBLIC_URL%/index.css" rel="stylesheet">
     <title>Boda Pablo y Paloma</title>
     <link
       rel="stylesheet"
@@ -17,16 +18,6 @@
     />
 
     <script type="text/javascript">
-      // Single Page Apps for GitHub Pages
-      // MIT License
-      // https://github.com/rafgraph/spa-github-pages
-      // This script checks to see if a redirect is present in the query string,
-      // converts it back into the correct url and adds it to the
-      // browser's history using window.history.replaceState(...),
-      // which won't cause the browser to attempt to load the new url.
-      // When the single page app is loaded further down in this file,
-      // the correct url will be waiting in the browser's history for
-      // the single page app to route accordingly.
       (function(l) {
         if (l.search[1] === '/' ) {
           var decoded = l.search.slice(1).split('&').map(function(s) { 
@@ -38,28 +29,6 @@
         }
       }(window.location))
     </script>
-
-    <style>
-    body {
-      background-color: #fffbf0; 
-    }
-    @media (min-width: 600px){
-      .background {
-        background-color: #fffbf0; 
-        background-image: url("%PUBLIC_URL%/assent/home1.png"); 
-        @supports (background-image: url("%PUBLIC_URL%/assent/home1.webp")) {
-          background-image: url("%PUBLIC_URL%/assent/home1.webp");
-        }
-        background-repeat: repeat-y;
-        background-size: contain;
-      }
-    }
-    @media (max-width: 600px){
-      .background {
-        background-color: #fffbf0;
-      }
-    }
-    </style>
   </head>
   <body>
     <div class="background">
