--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
+    <base href="/">
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
+    <script type="text/javascript"> document.write("<base href='//" + document.location.host + "' />"); </script>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#FFF3F3" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -15,19 +17,6 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
     />
-
-    <script type="text/javascript">
-      (function(l) {
-        if (l.search[1] === '/' ) {
-          var decoded = l.search.slice(1).split('&').map(function(s) { 
-            return s.replace(/~and~/g, '&')
-          }).join('?');
-          window.history.replaceState(null, null,
-              l.pathname.slice(0, -1) + decoded + l.hash
-          );
-        }
-      }(window.location))
-    </script>
     <style>
       body {
         background-color: #fffbf0; 
@@ -51,7 +40,6 @@
     <div class="background">
       <noscript>You need to enable JavaScript to run this app.</noscript>
       <div id="root"></div>
-      <script src="/build/bundle.js"></script>
     </div>
   </body>
 </html>
