--- a/public/index.html
+++ b/public/index.html
@@ -7,12 +7,21 @@
     <script type="text/javascript"> document.write("<base href='//" + document.location.host + "' />"); </script>
     <meta name="viewport" content="initial-scale=1, width=device-width" />
     <meta name="theme-color" content="#FFF3F3" />
+    <meta name="description" content="El inicio de nuestro FELICES PARA SIEMPRE" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Alex+Brush&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Cardo" rel="stylesheet">
     <title>Boda Pablo y Paloma</title>
+    <meta property="og:title" content="Boda Pablo y Paloma" />
+    <meta property="og:url" content="https://pabloypaloma.site/" />
+    <meta property="og:description" content="El inicio de nuestro FELICES PARA SIEMPRE">
+    <meta property="og:image" content="https://pabloypaloma.site/assent/portada_web.png" />
+    <meta property="og:type" content="website" />
+    <meta property="og:audio" content="https://pabloypaloma.site/assent/Cinderella.mp3" />
+    <meta property="og:audio:secure_url" content="https://secure.example.com/sound.mp3" />
+    <meta property="og:audio:type" content="audio/mpeg" />
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
